# rust-tmf-portal

./: .dockerignore  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  config.docker.json  config.json  docker-compose.yml  setup.bat
docker/: frontend-entrypoint.sh
portal-backend/: Cargo.toml
portal-backend/src/: error.rs  main.rs  openapi.rs  seq.rs  state.rs
portal-backend/src/routes/: admin.rs  mod.rs  proxy.rs
portal-frontend/: index.html  package-lock.json  package.json
portal-frontend/public/: runtime-config.js
portal-frontend/src/: App.tsx  main.tsx
portal-frontend/src/components/layout/: app-shell.tsx  sidebar-nav.tsx  theme-provider.tsx
portal-frontend/src/components/shared/: data-table.tsx  filter-panel.tsx  loading-state.tsx  page-header.tsx  status-badge.tsx
portal-frontend/src/hooks/: use-api-status.ts
portal-frontend/src/lib/: api.ts  query-keys.ts  types.ts
portal-frontend/src/pages/admin/: index.tsx
portal-frontend/src/pages/api/: browser.tsx  detail.tsx
portal-frontend/src/pages/orders/: builder.tsx  item-editor.tsx  party-place-editor.tsx  types.ts
tmf-client/: Cargo.toml
tmf-client/src/: client.rs  config.rs  error.rs  lib.rs  query.rs  schema.rs
tmf-client/src/schemas/: mod.rs  tmf620.rs  tmf622.rs  tmf629.rs  tmf632.rs  tmf633.rs  tmf634.rs  tmf637.rs  tmf638.rs  tmf639.rs  tmf641.rs  tmf645.rs  tmf648.rs  tmf651.rs  tmf666.rs  tmf674.rs
tmf-client/src/types/: account.rs  agreement.rs  catalog.rs  common.rs  inventory.rs  mod.rs  order.rs  party.rs  payment.rs  qualification.rs  site.rs
